# windows-rust-record-v2

./: .gitignore  Cargo.toml  README.md
docs/: openwakeword-testing.md
models/wakeword/: clip_that_v1.onnx  clip_that_v2.onnx  model_notes.txt
scripts/: monitor_openwakeword_mic.py  openwakeword-test-requirements.txt  package-release.ps1  test_openwakeword_wavs.py
src/: app.rs  audio.rs  capture.rs  config.rs  diagnostics.rs  display.rs  ffmpeg.rs  hotkey.rs  main.rs  paths.rs  recorder.rs  replay.rs  screenshot.rs  settings.rs  tray.rs  voice_trigger.rs
